2006-04-02  Dan Winship  <danw@novell.com>

	* Makefile.am (install-data-local): Install the .pc file mode 644,
	not 755. #330878

2006-03-03  Dan Winship  <danw@novell.com>

	* configure.in: bump version to 2.2.91.

	* NEWS: Update

2006-03-03  Dan Winship  <danw@novell.com>

	* libsoup/soup-dns.c (soup_dns_lookup_resolve_async): Take a
	GMainContext as well, and update the resolution code to dispatch
	each lookup result in the correct context.

	* libsoup/soup-address.c (soup_address_resolve_async_full): New
	method that takes a GMainContext to pass to
	soup_dns_lookup_resolve_async.

	* libsoup/soup-socket.c (soup_socket_connect): Use
	soup_address_resolve_async_full. Fixes a problem reported by Armin
	Bauer.

	* configure.in: update to require glib 2.6, since apparently the
	code does.

2006-02-25  Veerapuram Varadhan <vvaradhan@novell.com>

	* libsoup/soup-connection.c:
	* libsoup/soup-session.c:
	* libsoup/soup-socket.c: add a "timeout" property,
	which gets passed from server to socket, and session to connection
	to socket, allowing blocking non-responsive sync connections to 
	return.  Combination of "EAGAIN" && "Blocking" connection is treated
	as error and the connection will be terminated and the control 
	is returned to the caller immediately.
		
2006-02-02  Tor Lillqvist  <tml@novell.com>

	* configure.in: Don't use getaddrinfo() etc or try to support IPv6
	on Windows, as they are present by default on XP only. We do want
	to support Windows 2000, too.

2005-12-21  Dan Winship  <danw@novell.com>

	* libsoup/soup-date.c (soup_date_iso8601_parse): fix two bugs in
	the YYYYMMDD case.

	* tests/date.c: add three more ISO 8601 cases, to exercise all the
	code paths.

	#324671, from Emmanuele Bassi
	
2005-11-25  Dan Winship  <danw@novell.com>

	* README: sync to text on wiki, and point to wiki

	* TODO: moved to http://live.gnome.org/LibSoup_2fToDo

2005-11-17  Dan Winship  <danw@novell.com>

	* libsoup/soup-message-io.c (io_cleanup): clear priv->io_data